--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,16 @@
-#DATA SOURCE
+# DATA SOURCE
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_apiusuarios
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=#Cl25272005
 
-#JPA & HIBERNATE
+# JPA & HIBERNATE
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#CHAVE ANTIFALSIFICACAO
+jwt.secret=apiusuario_76dafc9add17447fa1a2a39414156c70
+
+
