criando serviços de recuperação de senha e testes com JUNIT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,10 @@ spring.jpa.properties.hibernate.format_sql=true
 #CHAVE ANTIFALSIFICACAO
 jwt.secret=apiusuario_76dafc9add17447fa1a2a39414156c70
 
-
+#CONTA DE EMAIL
+spring.mail.host=smtp-mail.outlook.com
+spring.mail.port=587
+spring.mail.username=cotiaulajava@outlook.com
+spring.mail.password=@Admin123456
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
